[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
text_io = "0.1.12"

[[bin]]
name = "01-p1"
path = "bin/01/p1.rs"

[[bin]]
name = "01-p2"
path = "bin/01/p2.rs"

[[bin]]
name = "02-p1"
path = "bin/02/p1.rs"

[[bin]]
name = "02-p2"
path = "bin/02/p2.rs"

[[bin]]
name = "03-p1"
path = "bin/03/p1.rs"

[[bin]]
name = "03-p2"
path = "bin/03/p2.rs"

[[bin]]
name = "04-p1"
path = "bin/04/p1.rs"

[[bin]]
name = "04-p2"
path = "bin/04/p2.rs"

[[bin]]
name = "05-p1"
path = "bin/05/p1.rs"

[[bin]]
name = "05-p2"
path = "bin/05/p2.rs"

[[bin]]
name = "06-p1"
path = "bin/06/p1.rs"

[[bin]]
name = "06-p2"
path = "bin/06/p2.rs"

[[bin]]
name = "07-p1"
path = "bin/07/p1.rs"

[[bin]]
name = "07-p2"
path = "bin/07/p2.rs"

[[bin]]
name = "08-p1"
path = "bin/08/p1.rs"

[[bin]]
name = "08-p2"
path = "bin/08/p2.rs"

[[bin]]
name = "09-p1"
path = "bin/09/p1.rs"

[[bin]]
name = "09-p2"
path = "bin/09/p2.rs"
