[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
text_io = "0.1.12"

[[bin]]
name = "01-p1"
path = "bin/01/p1.rs"

[[bin]]
name = "01-p2"
path = "bin/01/p2.rs"

[[bin]]
name = "02-p1"
path = "bin/02/p1.rs"

[[bin]]
name = "02-p2"
path = "bin/02/p2.rs"

[[bin]]
name = "03-p1"
path = "bin/03/p1.rs"

[[bin]]
name = "03-p2"
path = "bin/03/p2.rs"

[[bin]]
name = "04-p1"
path = "bin/04/p1.rs"

[[bin]]
name = "04-p2"
path = "bin/04/p2.rs"

[[bin]]
name = "05-p1"
path = "bin/05/p1.rs"

[[bin]]
name = "05-p2"
path = "bin/05/p2.rs"

[[bin]]
name = "06-p1"
path = "bin/06/p1.rs"

[[bin]]
name = "06-p2"
path = "bin/06/p2.rs"

[[bin]]
name = "07-p1"
path = "bin/07/p1.rs"

[[bin]]
name = "07-p2"
path = "bin/07/p2.rs"

[[bin]]
name = "08-p1"
path = "bin/08/p1.rs"

[[bin]]
name = "08-p2"
path = "bin/08/p2.rs"

[[bin]]
name = "09-p1"
path = "bin/09/p1.rs"

[[bin]]
name = "09-p2"
path = "bin/09/p2.rs"

[[bin]]
name = "10-p1"
path = "bin/10/p1.rs"

[[bin]]
name = "10-p2"
path = "bin/10/p2.rs"

[[bin]]
name = "11-p1"
path = "bin/11/p1.rs"

[[bin]]
name = "11-p2"
path = "bin/11/p2.rs"

[[bin]]
name = "12-p1"
path = "bin/12/p1.rs"

[[bin]]
name = "12-p2"
path = "bin/12/p2.rs"

[[bin]]
name = "13-p1"
path = "bin/13/p1.rs"

[[bin]]
name = "13-p2"
path = "bin/13/p2.rs"

[[bin]]
name = "14-p1"
path = "bin/14/p1.rs"

[[bin]]
name = "14-p2"
path = "bin/14/p2.rs"
